--- a/ChampionMains.Pyrobot/ChampionMains.Pyrobot.csproj
+++ b/ChampionMains.Pyrobot/ChampionMains.Pyrobot.csproj
@@ -391,4 +391,5 @@
     <Message Text="Configuration: $(Configuration): Web.Local.config" Importance="high" />
     <TransformXml Source="Web.template.config" Transform="Web.Local.config" Destination="Web.config" />
   </Target>
+  <Import Project="..\packages\Microsoft.Web.WebJobs.Publish.1.0.12\tools\webjobs.targets" Condition="Exists('..\packages\Microsoft.Web.WebJobs.Publish.1.0.12\tools\webjobs.targets')" />
 </Project>
