--- a/ChampionMains.Pyrobot/packages.config
+++ b/ChampionMains.Pyrobot/packages.config
@@ -29,6 +29,7 @@
   <package id="Microsoft.Owin.Security.Cookies" version="3.0.1" targetFramework="net452" />
   <package id="Microsoft.Owin.Security.OAuth" version="3.0.1" targetFramework="net452" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net452" />
+  <package id="Microsoft.Web.WebJobs.Publish" version="1.0.12" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net452" />
   <package id="Owin" version="1.0" targetFramework="net452" />
   <package id="Owin.Security.Providers.Reddit" version="2.7.0" targetFramework="net452" />
