--- a/ChampionMains.Pyrobot/ChampionMains.Pyrobot.csproj
+++ b/ChampionMains.Pyrobot/ChampionMains.Pyrobot.csproj
@@ -386,7 +386,9 @@
   -->
   <Target Name="CopyWebTemplateConfig" BeforeTargets="Build">
     <Copy SourceFiles="Web.template.config" DestinationFiles="Web.config" />
-    <Copy SourceFiles="App.template.config" DestinationFiles="App.config" Condition="Exists('App.template.config')" />
+    <Copy SourceFiles="..\ChampionMains.Pyrobot.WebJob\App.template.config"
+          DestinationFiles="..\ChampionMains.Pyrobot.WebJob\App.config"
+          Condition="..\ChampionMains.Pyrobot.WebJob\Exists('App.template.config')" />
   </Target>
   <Target Name="UpdateWebConfigBeforeRun" AfterTargets="CopyWebTemplateConfig" Condition="Exists('Web.Local.Config')">
     <Message Text="Configuration: $(Configuration): Web.Local.config" Importance="high" />
