--- a/ChampionMains.Pyrobot.WebJob/packages.config
+++ b/ChampionMains.Pyrobot.WebJob/packages.config
@@ -1,8 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Autofac" version="3.5.2" targetFramework="net45" />
-  <package id="Autofac.Mvc5" version="3.3.4" targetFramework="net45" />
-  <package id="Autofac.WebApi2" version="3.4.0" targetFramework="net45" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net45" />
@@ -20,6 +17,8 @@
   <package id="Microsoft.Web.WebJobs.Publish" version="1.0.12" targetFramework="net452" />
   <package id="Microsoft.WindowsAzure.ConfigurationManager" version="3.2.1" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net452" />
+  <package id="SimpleInjector" version="3.2.0" targetFramework="net452" />
+  <package id="SimpleInjector.Extensions.ExecutionContextScoping" version="3.2.0" targetFramework="net452" />
   <package id="System.Spatial" version="5.7.0" targetFramework="net45" />
   <package id="WindowsAzure.Storage" version="7.1.2" targetFramework="net452" />
 </packages>
