--- a/ChampionMains.Pyrobot/packages.config
+++ b/ChampionMains.Pyrobot/packages.config
@@ -1,9 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Antlr" version="3.5.0.2" targetFramework="net452" />
-  <package id="Autofac" version="3.5.2" targetFramework="net452" />
-  <package id="Autofac.Mvc5" version="3.3.4" targetFramework="net452" />
-  <package id="Autofac.WebApi2" version="3.4.0" targetFramework="net452" />
   <package id="BundleTransformer.Core" version="1.9.92" targetFramework="net452" />
   <package id="BundleTransformer.SassAndScss" version="1.9.104" targetFramework="net452" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net452" />
@@ -33,6 +30,11 @@
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net452" />
   <package id="Owin" version="1.0" targetFramework="net452" />
   <package id="Owin.Security.Providers.Reddit" version="2.7.0" targetFramework="net452" />
+  <package id="SimpleInjector" version="3.2.0" targetFramework="net452" />
+  <package id="SimpleInjector.Extensions.ExecutionContextScoping" version="3.2.0" targetFramework="net452" />
+  <package id="SimpleInjector.Integration.Web" version="3.2.0" targetFramework="net452" />
+  <package id="SimpleInjector.Integration.Web.Mvc" version="3.2.1" targetFramework="net452" />
+  <package id="SimpleInjector.Integration.WebApi" version="3.2.0" targetFramework="net452" />
   <package id="System.Spatial" version="5.7.0" targetFramework="net452" />
   <package id="WebGrease" version="1.6.0" targetFramework="net452" />
   <package id="WindowsAzure.Storage" version="7.1.2" targetFramework="net452" />
