set bulkupdate timeout in app configuration

--- a/ChampionMains.Pyrobot.WebJob/ChampionMains.Pyrobot.WebJob.csproj
+++ b/ChampionMains.Pyrobot.WebJob/ChampionMains.Pyrobot.WebJob.csproj
@@ -158,6 +158,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="WebJobConfiguration.cs" />
     <Compile Include="Jobs\BulkUpdateJob.cs" />
     <Compile Include="Jobs\FlairUpdateJob.cs" />
     <Compile Include="Jobs\SummonerUpdateJob.cs" />
