making update jobs less spammable

--- a/ChampionMains.Pyrobot.WebJob/App.template.config
+++ b/ChampionMains.Pyrobot.WebJob/App.template.config
@@ -24,10 +24,9 @@
     <add key="riot.rateLimit" value="10:10,500:600" />
 
     <add key="userAgent" value="aspnet:championMains.pyrobot" />
-    <add key="website.riotUpdateMin" value="00:00:02.000" />
-    <add key="website.riotUpdateMax" value="06:00:00.000" />
-    <add key="website.flairUpdateMin" value="00:00:02.000" />
-    <add key="website.flairUpdateMax" value="06:00:00.000" />
+    <add key="website.riotUpdateMin" value="00:00:10.000" />
+    <add key="website.riotUpdateMax" value="05:50:00.000" />
+    <add key="website.flairUpdate" value="05:50:00.000" />
     <add key="security.admins" value="LugnutsK" />
 
     <add key="webjob.maxAttempts" value="1" />
