--- a/ChampionMains.Pyrobot/Web.template.config
+++ b/ChampionMains.Pyrobot/Web.template.config
@@ -39,10 +39,9 @@
     <add key="webjob.wakeup.url" value="https://championmains-pyrobot.scm.azurewebsites.net/api/jobs/continuous/pyrobot-webjob/start" />-->
 
     <add key="userAgent" value="aspnet:championMains.pyrobot" />
-    <add key="website.riotUpdateMin" value="00:00:02.000" />
-    <add key="website.riotUpdateMax" value="06:00:00.000" />
-    <add key="website.flairUpdateMin" value="00:00:02.000" />
-    <add key="website.flairUpdateMax" value="06:00:00.000" />
+    <add key="website.riotUpdateMin" value="00:00:10.000" />
+    <add key="website.riotUpdateMax" value="05:50:00.000" />
+    <add key="website.flairUpdate" value="05:50:00.000" />
     <add key="security.admins" value="LugnutsK" />
     <add key="AzureWebJobsStorage" value="" />
   </appSettings>
