champion mastery text WIP

--- a/ChampionMains.Pyrobot.Data/ChampionMains.Pyrobot.Data.csproj
+++ b/ChampionMains.Pyrobot.Data/ChampionMains.Pyrobot.Data.csproj
@@ -175,6 +175,10 @@
     <Compile Include="Migrations\201608081849596_summonerchampionmaxter_ix_summoner.Designer.cs">
       <DependentUpon>201608081849596_summonerchampionmaxter_ix_summoner.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201608250410468_adding-subreddit-championmasterytextenabled.cs" />
+    <Compile Include="Migrations\201608250410468_adding-subreddit-championmasterytextenabled.Designer.cs">
+      <DependentUpon>201608250410468_adding-subreddit-championmasterytextenabled.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Champion.cs" />
     <Compile Include="Models\SubredditUserFlair.cs" />
@@ -267,6 +271,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201608081849596_summonerchampionmaxter_ix_summoner.resx">
       <DependentUpon>201608081849596_summonerchampionmaxter_ix_summoner.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201608250410468_adding-subreddit-championmasterytextenabled.resx">
+      <DependentUpon>201608250410468_adding-subreddit-championmasterytextenabled.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
