--- a/ChampionMains.Pyrobot.Infrastructure/ChampionMains.Pyrobot.Infrastructure.csproj
+++ b/ChampionMains.Pyrobot.Infrastructure/ChampionMains.Pyrobot.Infrastructure.csproj
@@ -113,7 +113,8 @@
     <Compile Include="Jobs\AsyncJobBase.cs" />
     <Compile Include="Jobs\ConfirmFlairUpdatedMailJob.cs" />
     <Compile Include="Jobs\ConfirmRegistrationMailJob.cs" />
-    <Compile Include="RankUtil.cs" />
+    <Compile Include="Util\FlairUtil.cs" />
+    <Compile Include="Util\RankUtil.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\ApplicationConfiguration.cs" />
     <Compile Include="Services\FlairService.cs" />
