adding public profiles

--- a/ChampionMains.Pyrobot/ChampionMains.Pyrobot.csproj
+++ b/ChampionMains.Pyrobot/ChampionMains.Pyrobot.csproj
@@ -518,6 +518,7 @@
     <Compile Include="Controllers\LoginController.cs" />
     <Compile Include="Controllers\BulkUpdateApiController.cs" />
     <Compile Include="Controllers\ProfileApiController.cs" />
+    <Compile Include="Controllers\PublicProfileController.cs" />
     <Compile Include="Controllers\ProfileController.cs" />
     <Compile Include="Controllers\RegistrationApiController.cs" />
     <Compile Include="Global.asax.cs">
