--- a/ChampionMains.Pyrobot/ChampionMains.Pyrobot.csproj
+++ b/ChampionMains.Pyrobot/ChampionMains.Pyrobot.csproj
@@ -469,6 +469,7 @@
     <Content Include="content\bootstrap\js\bootstrap.js" />
     <Content Include="content\bootstrap\js\bootstrap.min.js" />
     <Content Include="content\css\cyborg.css" />
+    <Content Include="content\css\flairdisplay.css" />
     <Content Include="content\icons\android-icon-144x144.png" />
     <Content Include="content\icons\android-icon-192x192.png" />
     <Content Include="content\icons\android-icon-36x36.png" />
@@ -704,6 +705,7 @@
     <Content Include="Properties\webjobs-list.json" />
     <Content Include="Views\Web.config" />
     <!-- - -->
+    <Content Include="Views\Profile\flairdisplay.cshtml" />
     <None Include="Web.config" />
     <Content Include="Web.template.config" />
     <None Include="Web.Local.config">
