--- a/ChampionMains.Pyrobot/bower.json
+++ b/ChampionMains.Pyrobot/bower.json
@@ -16,9 +16,9 @@
     "tests"
   ],
   "dependencies": {
-    "jquery": "^3.1.0",
-    "bootstrap": "^3.3.7",
-    "angular": "^1.5.8",
-    "chartjs": "^2.2.2"
+    "jquery": "3.1.1",
+    "bootstrap": "3.3.7",
+    "angular": "1.5.8",
+    "chartjs": "2.3.0"
   }
 }
