updaing redirect rule

--- a/ChampionMains.Pyrobot/Web.template.config
+++ b/ChampionMains.Pyrobot/Web.template.config
@@ -146,15 +146,16 @@
       <remove name="OPTIONSVerbHandler" />
       <remove name="TRACEVerbHandler" />
       <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
-    <add name="SassAssetHandler" path="*.sass" verb="GET" type="BundleTransformer.SassAndScss.HttpHandlers.SassAndScssAssetHandler, BundleTransformer.SassAndScss" resourceType="File" preCondition="" /><add name="ScssAssetHandler" path="*.scss" verb="GET" type="BundleTransformer.SassAndScss.HttpHandlers.SassAndScssAssetHandler, BundleTransformer.SassAndScss" resourceType="File" preCondition="" /></handlers>
+      <add name="SassAssetHandler" path="*.sass" verb="GET" type="BundleTransformer.SassAndScss.HttpHandlers.SassAndScssAssetHandler, BundleTransformer.SassAndScss" resourceType="File" preCondition="" /><add name="ScssAssetHandler" path="*.scss" verb="GET" type="BundleTransformer.SassAndScss.HttpHandlers.SassAndScssAssetHandler, BundleTransformer.SassAndScss" resourceType="File" preCondition="" />
+    </handlers>
     <rewrite>
       <rules>
         <rule name="azurewebsites_redirect" stopProcessing="true">
-          <match url="(.*)" />
+          <match url=".*" />
           <conditions logicalGrouping="MatchAny">
-            <add input="{HTTP_HOST}" pattern="^championmains-pyrobot\.azurewebsites\.net$" />
+            <add input="{HTTP_HOST}" pattern="^championmains\-pyrobot\.azurewebsites\.net$" />
           </conditions>
-          <action type="Redirect" url="http://flairs.championmains.com/{R:0}" />
+          <action type="Redirect" url="http://flairs.championmains.com/{R:0}" redirectType="Permanent" />
         </rule>
       </rules>
     </rewrite>
@@ -172,32 +173,33 @@
       <compiler language="vb;vbs;visualbasic;vbscript" extension=".vb" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:14 /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+" />
     </compilers>
   </system.codedom>
-<bundleTransformer xmlns="http://tempuri.org/BundleTransformer.Configuration.xsd">
-		<core>
-			<css>
-				<translators>
-					<add name="NullTranslator" type="BundleTransformer.Core.Translators.NullTranslator, BundleTransformer.Core" enabled="false" />
-				<add name="SassAndScssTranslator" type="BundleTransformer.SassAndScss.Translators.SassAndScssTranslator, BundleTransformer.SassAndScss" /></translators>
-				<postProcessors>
-					<add name="UrlRewritingCssPostProcessor" type="BundleTransformer.Core.PostProcessors.UrlRewritingCssPostProcessor, BundleTransformer.Core" useInDebugMode="false" />
-				</postProcessors>
-				<minifiers>
-					<add name="NullMinifier" type="BundleTransformer.Core.Minifiers.NullMinifier, BundleTransformer.Core" />
-				</minifiers>
-				<fileExtensions>
-					<add fileExtension=".css" assetTypeCode="Css" />
-				<add fileExtension=".sass" assetTypeCode="Sass" /><add fileExtension=".scss" assetTypeCode="Scss" /></fileExtensions>
-			</css>
-			<js>
-				<translators>
-					<add name="NullTranslator" type="BundleTransformer.Core.Translators.NullTranslator, BundleTransformer.Core" enabled="false" />
-				</translators>
-				<minifiers>
-					<add name="NullMinifier" type="BundleTransformer.Core.Minifiers.NullMinifier, BundleTransformer.Core" />
-				</minifiers>
-				<fileExtensions>
-					<add fileExtension=".js" assetTypeCode="JavaScript" />
-				</fileExtensions>
-			</js>
-		</core>
-	</bundleTransformer></configuration>
+  <bundleTransformer xmlns="http://tempuri.org/BundleTransformer.Configuration.xsd">
+    <core>
+      <css>
+        <translators>
+          <add name="NullTranslator" type="BundleTransformer.Core.Translators.NullTranslator, BundleTransformer.Core" enabled="false" />
+        <add name="SassAndScssTranslator" type="BundleTransformer.SassAndScss.Translators.SassAndScssTranslator, BundleTransformer.SassAndScss" /></translators>
+        <postProcessors>
+          <add name="UrlRewritingCssPostProcessor" type="BundleTransformer.Core.PostProcessors.UrlRewritingCssPostProcessor, BundleTransformer.Core" useInDebugMode="false" />
+        </postProcessors>
+        <minifiers>
+          <add name="NullMinifier" type="BundleTransformer.Core.Minifiers.NullMinifier, BundleTransformer.Core" />
+        </minifiers>
+        <fileExtensions>
+          <add fileExtension=".css" assetTypeCode="Css" />
+        <add fileExtension=".sass" assetTypeCode="Sass" /><add fileExtension=".scss" assetTypeCode="Scss" /></fileExtensions>
+      </css>
+      <js>
+        <translators>
+          <add name="NullTranslator" type="BundleTransformer.Core.Translators.NullTranslator, BundleTransformer.Core" enabled="false" />
+        </translators>
+        <minifiers>
+          <add name="NullMinifier" type="BundleTransformer.Core.Minifiers.NullMinifier, BundleTransformer.Core" />
+        </minifiers>
+        <fileExtensions>
+          <add fileExtension=".js" assetTypeCode="JavaScript" />
+        </fileExtensions>
+      </js>
+    </core>
+  </bundleTransformer>
+</configuration>
