--- a/ChampionMains.Pyrobot/Web.template.config
+++ b/ChampionMains.Pyrobot/Web.template.config
@@ -153,7 +153,7 @@
         <rule name="azurewebsites_redirect" stopProcessing="true">
           <match url=".*" />
           <conditions logicalGrouping="MatchAny">
-            <add input="{HTTP_HOST}" pattern="^championmains\-pyrobot\.azurewebsites\.net$" />
+            <add input="{HTTP_HOST}" pattern="azurewebsites\.net$" />
           </conditions>
           <action type="Redirect" url="http://flairs.championmains.com/{R:0}" redirectType="Permanent" />
         </rule>
