--- a/ChampionMains.Pyrobot/Web.template.config
+++ b/ChampionMains.Pyrobot/Web.template.config
@@ -154,6 +154,7 @@
           <match url=".*" />
           <conditions logicalGrouping="MatchAny">
             <add input="{HTTP_HOST}" pattern="azurewebsites\.net$" />
+            <add input="{HTTP_HOST}" pattern=".*" />
           </conditions>
           <action type="Redirect" url="http://flairs.championmains.com/{R:0}" redirectType="Permanent" />
         </rule>
