overwrite read-only in msbuild copy

--- a/ChampionMains.Pyrobot/ChampionMains.Pyrobot.csproj
+++ b/ChampionMains.Pyrobot/ChampionMains.Pyrobot.csproj
@@ -398,11 +398,11 @@
   </Target>
   -->
   <Target Name="BowerUpdate" BeforeTargets="Build">
-    <Exec Command="bower update" />
+    <Exec Command="bower update --force" />
   </Target>
   <Target Name="CopyWebTemplateConfig" BeforeTargets="Build">
-    <Copy SourceFiles="Web.template.config" DestinationFiles="Web.config" />
-    <Copy SourceFiles="..\ChampionMains.Pyrobot.WebJob\App.template.config" DestinationFiles="..\ChampionMains.Pyrobot.WebJob\App.config" Condition="Exists('..\ChampionMains.Pyrobot.WebJob\App.template.config') And !Exists('..\ChampionMains.Pyrobot.WebJob\App.Local.config')" />
+    <Copy SourceFiles="Web.template.config" DestinationFiles="Web.config" OverwriteReadOnlyFiles="true" />
+    <Copy SourceFiles="..\ChampionMains.Pyrobot.WebJob\App.template.config" DestinationFiles="..\ChampionMains.Pyrobot.WebJob\App.config" Condition="Exists('..\ChampionMains.Pyrobot.WebJob\App.template.config') And !Exists('..\ChampionMains.Pyrobot.WebJob\App.Local.config')" OverwriteReadOnlyFiles="true" />
   </Target>
   <Target Name="UpdateWebConfigBeforeRun" AfterTargets="CopyWebTemplateConfig" Condition="Exists('Web.Local.Config')">
     <Message Text="Configuration: $(Configuration): Web.Local.config" Importance="high" />
