--- a/ChampionMains.Pyrobot/ChampionMains.Pyrobot.csproj
+++ b/ChampionMains.Pyrobot/ChampionMains.Pyrobot.csproj
@@ -401,8 +401,10 @@
     <Exec Command="bower update --force" />
   </Target>
   <Target Name="CopyWebTemplateConfig" BeforeTargets="Build">
-    <Copy SourceFiles="Web.template.config" DestinationFiles="Web.config" OverwriteReadOnlyFiles="true" />
-    <Copy SourceFiles="..\ChampionMains.Pyrobot.WebJob\App.template.config" DestinationFiles="..\ChampionMains.Pyrobot.WebJob\App.config" Condition="Exists('..\ChampionMains.Pyrobot.WebJob\App.template.config') And !Exists('..\ChampionMains.Pyrobot.WebJob\App.Local.config')" OverwriteReadOnlyFiles="true" />
+    <Delete Files="Web.config" />
+    <Copy SourceFiles="Web.template.config" DestinationFiles="Web.config" />
+    <Delete Files="..\ChampionMains.Pyrobot.WebJob\App.config" />
+    <Copy SourceFiles="..\ChampionMains.Pyrobot.WebJob\App.template.config" DestinationFiles="..\ChampionMains.Pyrobot.WebJob\App.config" Condition="Exists('..\ChampionMains.Pyrobot.WebJob\App.template.config') And !Exists('..\ChampionMains.Pyrobot.WebJob\App.Local.config')" />
   </Target>
   <Target Name="UpdateWebConfigBeforeRun" AfterTargets="CopyWebTemplateConfig" Condition="Exists('Web.Local.Config')">
     <Message Text="Configuration: $(Configuration): Web.Local.config" Importance="high" />
