--- a/ChampionMains.Pyrobot/ChampionMains.Pyrobot.csproj
+++ b/ChampionMains.Pyrobot/ChampionMains.Pyrobot.csproj
@@ -403,7 +403,7 @@
   <Target Name="CopyWebTemplateConfig" BeforeTargets="Build">
     <Delete Files="Web.config" />
     <Copy SourceFiles="Web.template.config" DestinationFiles="Web.config" />
-    <Delete Files="..\ChampionMains.Pyrobot.WebJob\App.config" />
+    <Delete Files="..\ChampionMains.Pyrobot.WebJob\App.config" Condition="Exists('..\ChampionMains.Pyrobot.WebJob\App.template.config') And !Exists('..\ChampionMains.Pyrobot.WebJob\App.Local.config')" />
     <Copy SourceFiles="..\ChampionMains.Pyrobot.WebJob\App.template.config" DestinationFiles="..\ChampionMains.Pyrobot.WebJob\App.config" Condition="Exists('..\ChampionMains.Pyrobot.WebJob\App.template.config') And !Exists('..\ChampionMains.Pyrobot.WebJob\App.Local.config')" />
   </Target>
   <Target Name="UpdateWebConfigBeforeRun" AfterTargets="CopyWebTemplateConfig" Condition="Exists('Web.Local.Config')">
