testing using riotsharp library (not yet ready for production)

--- a/ChampionMains.Pyrobot.WebJob/App.template.config
+++ b/ChampionMains.Pyrobot.WebJob/App.template.config
@@ -22,7 +22,9 @@
     <add key="riot.maxAttempts" value="3" />
     <add key="riot.retryInterval" value="0:00:01.5" />
     <add key="riot.rateLimit" value="10:10,500:600" />
-
+    <add key="riot.rateLimit10s" value="10" />
+    <add key="riot.rateLimit10m" value="500" />
+    
     <add key="userAgent" value="aspnet:championMains.pyrobot" />
     <add key="website.riotUpdateMin" value="00:00:10.000" />
     <add key="website.riotUpdateMax" value="05:50:00.000" />
