--- a/ChampionMains.Pyrobot/Web.template.config
+++ b/ChampionMains.Pyrobot/Web.template.config
@@ -33,6 +33,8 @@
     <add key="riot.maxAttempts" value="3" />
     <add key="riot.retryInterval" value="0:00:05" />
     <add key="riot.rateLimit" value="10:10,500:600" />
+    <add key="riot.rateLimit10s" value="10" />
+    <add key="riot.rateLimit10m" value="500" />
 
     <!--<add key="webjob.wakeup.username" value="$championmains-pyrobot" />
     <add key="webjob.wakeup.password" value="" />
