--- a/ChampionMains.Pyrobot.Startup/ChampionMains.Pyrobot.Startup.csproj
+++ b/ChampionMains.Pyrobot.Startup/ChampionMains.Pyrobot.Startup.csproj
@@ -33,6 +33,9 @@
     <Reference Include="EntityFramework">
       <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.dll</HintPath>
     </Reference>
+    <Reference Include="RiotSharp">
+      <HintPath>..\packages\RiotSharp.2.5.0\lib\portable-net45+win+wpa81\RiotSharp.dll</HintPath>
+    </Reference>
     <Reference Include="SimpleInjector, Version=3.2.0.0, Culture=neutral, PublicKeyToken=984cb50dea722e99, processorArchitecture=MSIL">
       <HintPath>..\packages\SimpleInjector.3.2.0\lib\net45\SimpleInjector.dll</HintPath>
       <Private>True</Private>
