--- a/ChampionMains.Pyrobot.WebJob/ChampionMains.Pyrobot.WebJob.csproj
+++ b/ChampionMains.Pyrobot.WebJob/ChampionMains.Pyrobot.WebJob.csproj
@@ -169,8 +169,11 @@
     <Compile Include="ScopedQueueProcessFactory.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
+    <None Include="App.config">
+      <SubType>Designer</SubType>
+    </None>
     <Content Include="App.template.config" />
+    <None Include="App.Example.Config" />
     <None Include="App.Local.config">
       <DependentUpon>App.template.config</DependentUpon>
     </None>
@@ -226,10 +229,10 @@
   <Target Name="AfterBuild">
   </Target>
   -->
-  <Target Name="CopyAppTemplateConfig" BeforeTargets="Build">
+  <Target Name="CopyAppTemplateConfig" BeforeTargets="Clean">
     <Copy SourceFiles="App.template.config" DestinationFiles="App.config" />
   </Target>
-  <Target Name="UpdateAppConfigBeforeRun" AfterTargets="CopyAppTemplateConfig" Condition="Exists('App.Local.Config')">
+  <Target Name="UpdateAppConfigBeforeRun" BeforeTargets="Build" Condition="Exists('App.Local.Config')">
     <Message Text="Configuration: $(Configuration): App.Local.config" Importance="high" />
     <TransformXml Source="App.template.config" Transform="App.Local.config" Destination="App.config" />
   </Target>
